[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenablesc-ai-analyst"
version = "0.1.0"
description = "A vulnerability-analyst MCP server for Tenable Security Center (Tenable.sc)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "ayuksel-tenb" }]
keywords = ["tenable", "security-center", "tenable-sc", "mcp", "vulnerability-management"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tenablesc-ai-analyst-mcp = "tenablesc_ai_analyst.server:main"

[project.urls]
Homepage = "https://github.com/ayuksel-tenb/tenablesc-ai-analyst"
Repository = "https://github.com/ayuksel-tenb/tenablesc-ai-analyst"

[tool.hatch.build.targets.wheel]
packages = ["src/tenablesc_ai_analyst"]
